test/types/type_variables/deitz/test_clone_class1b.good
error: 'a' has mixed basic types:( int64 float64 ) 
error: 'a' has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
error: expression has mixed basic types:( int64 float64 ) 
fail: program does not type
prelude.chpl:307: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:307: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:308: expression has mixed basic types:( int64 float64 ) 
prelude.chpl:308: expression has mixed basic types:( int64 float64 ) 
test_clone_class1b.chpl:1: class foo:: 'x' has mixed basic types:( int64 float64 ) 
test_clone_class1b.chpl:2: '_retval' has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:2: expression has mixed basic types:( null int64 float64 ) 
test_clone_class1b.chpl:4: expression has mixed basic types:( null int64 float64 ) 
